# sonarium

./: .clang-format  .clang-tidy  .dockerignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  justfile  meson.build
.github/workflows/: ci.yml
packaging/archlinux/: PKGBUILD  sonarium.sysusers
packaging/systemd/: sonarium-dlna.service  sonarium-server.service  sonarium-worker.service  sonarium.env.example
scripts/: ssdp_probe.py
src/: meson.build
src/catalog/: album.hpp  artist.hpp  catalog_factory.cpp  catalog_factory.hpp  catalog_writer.hpp  in_memory_repository.cpp  in_memory_repository.hpp  meson.build  playlist.hpp  postgres_repository.cpp  postgres_repository.hpp  postgres_schema.hpp  repository.hpp  sqlite_repository.cpp  sqlite_repository.hpp  sqlite_schema.hpp  storage_asset.hpp  track.hpp
src/cli/: dlna_status.cpp  dlna_status.hpp  http_client.cpp  http_client.hpp  main.cpp  meson.build
src/composition/: connection_manager_service.cpp  connection_manager_service.hpp  content_directory_service.cpp  content_directory_service.hpp  dlna_server.cpp  dlna_server.hpp  http_routes.cpp  http_routes.hpp  injector.cpp  injector.hpp  meson.build  service_config.hpp  soap_router.cpp  soap_router.hpp  ssdp_service.cpp  ssdp_service.hpp
src/core/: constant_time.hpp  env_config.cpp  env_config.hpp  external_deps_smoke.cpp  external_deps_smoke.hpp  hmac_sha256.cpp  hmac_sha256.hpp  logger.hpp  logspine_logger.cpp  logspine_logger.hpp  media_token.cpp  media_token.hpp  meson.build  null_logger.hpp  operator_mode.cpp  operator_mode.hpp  path_containment.cpp  path_containment.hpp  sha256.cpp  sha256.hpp  version.cpp  version.hpp  version_info.hpp.in
src/dlna/: config.hpp  main.cpp  meson.build
src/dlna-core/: browse_handler.cpp  browse_handler.hpp  connection_manager_handler.cpp  connection_manager_handler.hpp  device_profile.cpp  device_profile.hpp  didl_lite_builder.cpp  didl_lite_builder.hpp  dlna_object_id.cpp  dlna_object_id.hpp  media_resource_selector.cpp  media_resource_selector.hpp  meson.build  protocol_info.cpp  protocol_info.hpp  xml_escape.cpp  xml_escape.hpp
src/hls/: meson.build  playlist_builder.cpp  playlist_builder.hpp  segmenter.cpp  segmenter.hpp
src/media/: duration_format.cpp  duration_format.hpp  media_rendition.hpp  meson.build  mime_type.cpp  mime_type.hpp
src/scanner/: audio_metadata.cpp  audio_metadata.hpp  media_scanner.cpp  media_scanner.hpp  meson.build  path_layout.cpp  path_layout.hpp
src/server/: hls_routes.cpp  hls_routes.hpp  main.cpp  meson.build
src/transcode/: ffmpeg_command.cpp  ffmpeg_command.hpp  ffmpeg_runner.cpp  ffmpeg_runner.hpp  meson.build  transcode_request.cpp  transcode_request.hpp
src/upnp/: device_description.cpp  device_description.hpp  meson.build  scpd_documents.cpp  scpd_documents.hpp  soap_action.cpp  soap_action.hpp  soap_envelope.cpp  soap_envelope.hpp  ssdp_messages.cpp  ssdp_messages.hpp  upnp_error.hpp
src/worker/: fs_watcher.hpp  fs_watcher_fsevents.cpp  fs_watcher_inotify.cpp  fs_watcher_polling.cpp  fs_watcher_unsupported.cpp  main.cpp  meson.build
subprojects/: asterorm.wrap  atria.wrap  catch2.wrap  ctorwire.wrap  logspine.wrap
tests/: meson.build  smoke_tests.cpp
tests/catalog/: in_memory_repository_tests.cpp  meson.build  postgres_repository_tests.cpp  sqlite_repository_tests.cpp
tests/cli/: dlna_status_tests.cpp  http_client_tests.cpp  meson.build
tests/composition/: dlna_server_tests.cpp  http_routes_tests.cpp  logging_tests.cpp  media_token_routes_tests.cpp  meson.build  ssdp_service_tests.cpp
tests/core/: env_config_tests.cpp  external_deps_smoke_tests.cpp  hmac_sha256_tests.cpp  media_token_tests.cpp  meson.build  operator_mode_tests.cpp  path_containment_tests.cpp  sha256_tests.cpp  version_tests.cpp
tests/dlna-core/: browse_handler_tests.cpp  connection_manager_handler_tests.cpp  device_profile_tests.cpp  didl_lite_builder_tests.cpp  dlna_object_id_tests.cpp  media_resource_selector_tests.cpp  meson.build  protocol_info_tests.cpp  xml_escape_tests.cpp
tests/hls/: meson.build  playlist_builder_tests.cpp  segmenter_tests.cpp
tests/media/: duration_format_tests.cpp  meson.build  mime_type_tests.cpp
tests/scanner/: audio_metadata_tests.cpp  media_scanner_tests.cpp  meson.build  path_layout_tests.cpp
tests/server/: hls_routes_tests.cpp  meson.build
tests/transcode/: ffmpeg_command_tests.cpp  meson.build
tests/upnp/: device_description_tests.cpp  meson.build  scpd_documents_tests.cpp  soap_action_tests.cpp  soap_envelope_tests.cpp  ssdp_messages_tests.cpp
tests/worker/: fs_watcher_tests.cpp  meson.build
